Fixed logo/text spacing

--- a/sites/all/modules/custom/vm/VersioningMachine/src/vmachine.css
+++ b/sites/all/modules/custom/vm/VersioningMachine/src/vmachine.css
@@ -94,7 +94,7 @@ div#brandingLogo a span#home_text {
     text-align: center;
     padding-left: 2em;
     position: absolute;
-    left: 75px;
+    left: 95px;
     top: 25px;
 }
 
